[package]
name = "phroxy"
version = "0.1.1-dev"
authors = ["dvkt <c@dvkt.io>"]
edition = "2018"
license = "MIT"
description = "phroxy proxies gopher through HTTP"
readme = "README.md"
repository = "https://github.com/dvkt/phroxy"
keywords = ["gopher", "proxy"]
exclude = [
    "img/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="phroxy-v\\d\\.\\d\\.\\d-", replace="{{crate_name}}-v{{version}}-"},
  {file="README.md", search="/v\\d\\.\\d\\.\\d/", replace="/v{{version}}/"},
]
dev-version-ext = "dev"

[dependencies]
threadpool = "1.7.1"
phetch = "0.1.10"
htmlescape = "0.3.1"
rust-embed="5.2.0"
