[package]
name = "phroxy"
version = "0.1.3-dev"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "MIT"
description = "phroxy proxies gopher through HTTP"
readme = "README.md"
repository = "https://github.com/xvxx/phroxy"
keywords = ["gopher", "proxy"]
exclude = [
    "img/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[package.metadata.release]
dev-version-ext = "dev"

[dependencies]
threadpool = "1.7.1"
phetch = "0.1.10"
htmlescape = "0.3.1"
rust-embed="5.2.0"
