[package]
name = "phroxy"
version = "0.1.6-dev"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "MIT"
description = "phroxy proxies gopher through HTTP"
homepage = "https://phroxy.net"
readme = "README.md"
repository = "https://github.com/xvxx/phroxy"
keywords = ["gopher", "proxy"]
exclude = [
    "img/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[package.metadata.release]
dev-version-ext = "dev"

[dependencies]
threadpool = "1.7.1"
phetch = { version = "1.0.3", default-features = false, features = ['tls'] }
htmlescape = "0.3.1"
rust-embed="5.2.0"
linkify = "0.4.0"
regex = "1.3.3"
vte = "0.3.2"
autolink = "0.3.0"
